crates/kirin-derive-interpreter/src/call_semantics/snapshots/kirin_derive_interpreter__call_semantics__tests__callable_global.snap
---
source: crates/kirin-derive-interpreter/src/call_semantics/tests.rs
expression: "case!\n{\n    #[kirin(type = ArithType)] #[wraps] #[callable] enum TestDialect\n    {\n        Arith(Arith<ArithType>), ControlFlow(ControlFlow<ArithType>),\n        FunctionBody(FunctionBody<ArithType>),\n    }\n}"
---
#[automatically_derived]
impl<'__ir, __CallSemI> ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect>
    for TestDialect
where
    __CallSemI: ::kirin_interpreter::Interpreter<'__ir>,
    __CallSemI::Error: From<::kirin_interpreter::InterpreterError>,
    Arith<ArithType>: ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect>,
    ControlFlow<ArithType>: ::kirin_interpreter::CallSemantics<
        __CallSemI,
        TestDialect,
        Result = <Arith<ArithType> as ::kirin_interpreter::CallSemantics<
            '__ir,
            __CallSemI,
            TestDialect,
        >>::Result,
    >,
    FunctionBody<ArithType>: ::kirin_interpreter::CallSemantics<
        __CallSemI,
        TestDialect,
        Result = <Arith<ArithType> as ::kirin_interpreter::CallSemantics<
            '__ir,
            __CallSemI,
            TestDialect,
        >>::Result,
    >,
{
    type Result = <Arith<ArithType> as ::kirin_interpreter::CallSemantics<
        '__ir,
        __CallSemI,
        TestDialect,
    >>::Result;
    fn call_semantics(
        &self,
        interpreter: &mut __CallSemI,
        callee: ::kirin::ir::SpecializedFunction,
        args: &[__CallSemI::Value],
    ) -> Result<Self::Result, __CallSemI::Error> {
        match self {
            Self::Arith(field_0) => field_0.call_semantics(interpreter, callee, args),
            Self::ControlFlow(field_0) => field_0.call_semantics(interpreter, callee, args),
            Self::FunctionBody(field_0) => field_0.call_semantics(interpreter, callee, args),
        }
    }
}
