crates/kirin-derive-interpreter/src/call_semantics/snapshots/kirin_derive_interpreter__call_semantics__tests__callable_per_variant.snap
---
source: crates/kirin-derive-interpreter/src/call_semantics/tests.rs
assertion_line: 83
expression: "case!\n{\n    #[kirin(type = ArithType)] #[wraps] enum TestDialect\n    {\n        Arith(Arith<ArithType>), ControlFlow(ControlFlow<ArithType>),\n        #[callable] FunctionBody(FunctionBody<ArithType>),\n    }\n}"
---
impl<__CallSemI> ::kirin_interpreter::CallSemantics<__CallSemI, TestDialect> for TestDialect
where
    __CallSemI: ::kirin_interpreter::Interpreter,
    __CallSemI::Error: From<::kirin_interpreter::InterpreterError>,
    FunctionBody<ArithType>: ::kirin_interpreter::CallSemantics<__CallSemI, TestDialect>,
{
    type Result = <FunctionBody<ArithType> as ::kirin_interpreter::CallSemantics<
        __CallSemI,
        TestDialect,
    >>::Result;
    fn call_semantics(
        &self,
        interpreter: &mut __CallSemI,
        callee: ::kirin::ir::SpecializedFunction,
        args: &[__CallSemI::Value],
    ) -> Result<Self::Result, __CallSemI::Error> {
        match self {
            Self::Arith(field_0) => Err(::kirin_interpreter::InterpreterError::MissingEntry.into()),
            Self::ControlFlow(field_0) => {
                Err(::kirin_interpreter::InterpreterError::MissingEntry.into())
            }
            Self::FunctionBody(field_0) => field_0.call_semantics(interpreter, callee, args),
        }
    }
}
