crates/kirin-derive-interpreter/src/call_semantics/snapshots/kirin_derive_interpreter__call_semantics__tests__generic_wrapper_enum.snap
---
source: crates/kirin-derive-interpreter/src/call_semantics/tests.rs
expression: "case!\n{\n    #[kirin(type = T)] #[wraps] enum TestDialect<T>\n    { Arith(Arith<T>), ControlFlow(ControlFlow<T>), }\n}"
---
#[automatically_derived]
impl<'__ir, T, __CallSemI> ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect<T>>
    for TestDialect<T>
where
    __CallSemI: ::kirin_interpreter::Interpreter<'__ir>,
    __CallSemI::Error: From<::kirin_interpreter::InterpreterError>,
    Arith<T>: ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect<T>>,
    ControlFlow<T>: ::kirin_interpreter::CallSemantics<
        __CallSemI,
        TestDialect<T>,
        Result = <Arith<T> as ::kirin_interpreter::CallSemantics<
            '__ir,
            __CallSemI,
            TestDialect<T>,
        >>::Result,
    >,
{
    type Result =
        <Arith<T> as ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect<T>>>::Result;
    fn call_semantics(
        &self,
        interpreter: &mut __CallSemI,
        callee: ::kirin::ir::SpecializedFunction,
        args: &[__CallSemI::Value],
    ) -> Result<Self::Result, __CallSemI::Error> {
        match self {
            Self::Arith(field_0) => field_0.call_semantics(interpreter, callee, args),
            Self::ControlFlow(field_0) => field_0.call_semantics(interpreter, callee, args),
        }
    }
}
